--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ ENABLE_DOCUMENTATION=true
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_DATABASE=postgres
+DB_PASSWORD=1234
+DB_DATABASE=forecastDb
 
 # aws configurations
 ## AWS S3
