--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "awesome-nest-boilerplate",
-    "version": "7.0.1",
-    "description": "Awesome NestJS Boilerplate, Typescript, Postgres, TypeORM",
-    "author": "Narek Hakobyan <narek.hakobyan.07@gmail.com>",
+    "name": "forecast-server",
+    "version": "0.0.1",
+    "description": "Awesome NestJS app, Typescript, Postgres, TypeORM",
+    "author": "Mohammad Farahmand based on Narek Hakobyan git repo.",
     "private": true,
     "license": "MIT",
     "scripts": {
