--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "nestjs",
         "postgres"
     ],
-    "editor.detectIndentation": false
+    "editor.detectIndentation": false,
+    "debug.node.autoAttach": "on"
 }
